fix: update hamburger styles and add logo alignment

--- a/headphones/styles.css
+++ b/headphones/styles.css
@@ -559,9 +559,9 @@ footer a {
    }
 
 .hamburger .line {
-    width: 35px;
+    width: 25px;
     height: 3px;
-    background-color: #d34242;
+    background-color: #fff;
     margin: 4px 0;
     transition: all 0.3s ease;
 }
@@ -569,12 +569,12 @@ footer a {
 .hamburger .line-1{
     width: 15px;
     height: 3px;
-    background-color: #d34242;
+    background-color: #fff;
     margin: 4px 0;
 }
 @media screen and (max-width: 480px) {
     .hamburger {
-     border: 2px solid white;
+     /* border: 2px solid white; */
      display: flex;
      flex-direction: column;
      cursor: pointer;
@@ -600,13 +600,38 @@ footer a {
         transform: rotate(-45deg) translateY(-12px);
         width:25px;
         transition: trnasform 0.3s ease-in-out;
-      }
+    }
+    .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin: 0 60px;
+      padding: 10px 0;
+    }
 
     .nav-links{
         display: none;
         list-style: none;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0;
+        text-align: center;
+        /* text-align: center; */
+        /* width: 100%;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.9); */
+        /* padding: 20px 0; */
     }
-
+    .nav-links li {
+        margin-right: 0;
+        margin-bottom: 20px;
+        /* margin: auto 0; */
+    }
      #nav-links.active{
         display: block;
     }
